plang/testing/logs/false-incorrect/150/program150.p.p.out
Error at sP :- ((((jO (ZdOV) F; vAy rjGPk)))).:11:5 error: 
sP :- ((((jO (ZdOV) F; vAy rjGPk)))).
    ^
Error at sP :- ((((jO (ZdOV) F; vAy rjGPk)))).:11:21 error: 
sP :- ((((jO (ZdOV) F; vAy rjGPk)))).
                    ^
Error at sP :- ((((jO (ZdOV) F; vAy rjGPk)))).:11:32 error: 
sP :- ((((jO (ZdOV) F; vAy rjGPk)))).
                               ^
Error at ? (p).:12:1 error: 
? (p).
^