plang/testing/logs/false-incorrect/150/program150.p.p
sIEE :- gjvTp V t (lysn (oTs3 (IQ5h) UN0T)).
pubg (oQp4g).
xD9T (O) (Af) pT.

oy0I0 Qw (LFj) Sqo kg.
vON K L.

xC76 (GZ) (gwp) HWf.
e (veYz (h0Ou7 (XoTH6) (q YYBcO (dv k (YSqc) UI) (h (RE8K8) (v YxwT)) GW28)) (wn8Le) t Z).

sP :- ((((jO (ZdOV) F; vAy rjGPk)))).
? (p).

